Move css to it's own file. e#	README.md~

--- a/html/index.html
+++ b/html/index.html
@@ -6,52 +6,7 @@
     <link href="node_modules/vis/dist/vis-network.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.15/js/jquery.dataTables.js"></script>
-    <style>
-
-#hosts_container {
-margin: 0 auto;
-padding: 1em 0 0 0;
-font-family: georgia, serif;
-text-transform: lowercase;
-}
-
-ul#hosts_list
-{
-list-style: none;
-padding: 0;
-margin: 0 auto;
-width: 80%;
-font-size: 0.8em;
-}
-
-ul#hosts_list li
-{
-display: block;
-float: left;
-width: 15%;
-margin: 0;
-padding: 0;
-}
-
-ul#hosts_list li a
-{
-display: block;
-width: 100%;
-padding: 0.5em;
-border-width: 1px;
-border-color: #ffe #aaab9c #ccc #fff;
-border-style: solid;
-color: #777;
-text-decoration: none;
-background: #f7f2ea;
-}
-
-ul#hosts_list li a.current_selection
-{
-color: blue;
-}
-
-   </style>
+    <link rel="stylesheet" type="text/css" href="netwhere.css">
   </head>
   <body>
     <div id="hosts_container">
