Display port and protocol in hosts table.

--- a/html/index.html
+++ b/html/index.html
@@ -22,15 +22,6 @@
 		</div>
 		<div class="col-md-9">
 		  <h2 id="host_name"></h2>
-		  <table id="hosts_table" paging=false class="display">
-			<thead>
-			  <tr>
-				<th>IP</th><th>Name</th><th>Network</th><th>In</th><th>Out</th>
-			  </tr>
-			</thead>
-			<tbody>
-			</tbody>
-		  </table>
 
 		  <table id="networks_table" paging=false class="display">
 			<thead>
@@ -41,6 +32,17 @@
 			<tbody>
 			</tbody>
 		  </table>
+
+		  <table id="hosts_table" paging=false class="display">
+			<thead>
+			  <tr>
+				<th>IP</th><th>Name</th><th>Network</th><th>Port/Proto</th><th>In</th><th>Out</th>
+			  </tr>
+			</thead>
+			<tbody>
+			</tbody>
+		  </table>
+
         </div>
 	  </div>
 	</div>
