--- a/html/index.html
+++ b/html/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.css">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v2.2.0/dist/mini-default.min.css">
 	<style>
-	  #hosts_list > a {
-	  line-height : 1;
-	  border-bottom: 1px;
+	  .host {
+	    width:100%;
+   	    border-bottom: 1px solid;
+	    margin:0px;
+	    text-align:left;
 	  }
 	</style>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,12 +19,10 @@
   <body>
 	<div class="container">
 	  <div class="row">
-		<div class="col-md-3">
-		  <nav id="hosts_list"></nav>
+		<div class="col-md-3" id="hosts_list">
 		</div>
 		<div class="col-md-9">
 		  <h2 id="host_name"></h2>
-
 		  <table id="networks_table" paging=false class="display">
 			<thead>
 			  <tr>
